// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SimpleCard /> by default matches with snapshot 1`] = `
<div
  className="k-Card k-Card--withoutBoxShadowOnHover"
>
  <div
    className="k-Card__imageContainer marger__MargerDiv-q3lecu-0 iPaUkj"
    style={null}
  >
    <img
      alt=""
      className="k-Card__image"
      src="https://placehold.it/200x200/caf4fe/caf4fe"
      style={
        Object {
          "display": "block",
          "width": "100%",
        }
      }
    />
  </div>
  <div
    className="marger__MargerDiv-q3lecu-0 dmMPzX"
    style={null}
  >
    <span
      className="k-HorizontalStroke k-HorizontalStroke--tiny"
    />
  </div>
</div>
`;

exports[`<SimpleCard /> without horizontalStroke prop matches snapshot 1`] = `
<div
  className="k-Card k-Card--withoutBoxShadowOnHover"
>
  <div
    className="k-Card__imageContainer marger__MargerDiv-q3lecu-0 iPaUkj"
    style={null}
  >
    <img
      alt=""
      className="k-Card__image"
      src="https://placehold.it/200x200/caf4fe/caf4fe"
      style={
        Object {
          "display": "block",
          "width": "100%",
        }
      }
    />
  </div>
</div>
`;
